--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sqdr-apmplanner2 (2.1.0-1) stable; urgency=medium
+
+  * Open logs from CLI
+  * Revert "Mavlink now uses internal buffers" whic causes incompatibility with our autopilot
+
+ -- Titus Senez <titus.senez@squadrone-system.com>  Mon, 28 Aug 2023 10:51:01 +0200
+
 sqdr-apmplanner2 (2.0.30-1) stable; urgency=medium
 
   * Initial release.
